manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flaskapp
  labels:
    app: flaskapp
spec:
  ports:
  - port: 5000
    protocol: TCP
    name: flaskapp
  selector:
    app: flaskapp
  type: LoadBalancer
